# suricata-master-3.2.x-simple

./: .gitignore  Makefile  Makefile.in  code_reading.txt  compile_commands.json  config.h  config.h.in  config.status  configure  suricata.tar  suricata.yaml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile  Makefile.am  Makefile.in
doc/userguide/: Makefile  Makefile.in
rules/: Makefile  Makefile.in  botcc.portgrouped.rules  botcc.rules  ciarmy.rules  compromised-ips.txt  compromised.rules  drop.rules  dshield.rules  emerging-attack_response.rules  emerging-chat.rules  emerging-current_events.rules  emerging-deleted.rules  emerging-dos.rules  emerging-exploit.rules  emerging-games.rules  emerging-info.rules  emerging-malware.rules  emerging-mobile_malware.rules  emerging-policy.rules  emerging-scan.rules  emerging-user_agents.rules  emerging-web_client.rules  emerging-web_server.rules  emerging-web_specific_apps.rules  sid-msg.map  tor.rules
scripts/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  alert-fastlog.h  alert-syslog.c  alert-unified2-alert.c  app-layer-detect-proto.c  app-layer-htp.c  app-layer-parser.c  app-layer-parser.h  app-layer-protos.c  app-layer-protos.h  app-layer-smb.c  app-layer-smb.h  app-layer.c  build-info.h  conf.c  conf.h  decode-ethernet.c  decode-events.c  decode-events.h  decode-gre.c  decode-icmpv4.h  decode-icmpv6.c  decode-icmpv6.h  decode-ipv4.c  decode-ipv6.c  decode-tcp.c  decode-vlan.c  decode.c  decode.h  detect-app-layer-event.c  detect-content.c  detect-content.h  (+76 more)
(+374 files in other folders)
