SUBDIRS = userguide

EXTRA_DIST = \
AUTHORS \
GITGUIDE \
INSTALL \
NEWS \
README \
TODO \
INSTALL.PF_RING \
INSTALL.WINDOWS \
\
Basic_Setup.txt \
Debian_Installation.txt \
HTP_library_installation.txt \
Installation_from_GIT_with_PF_RING_on_Ubuntu_server_1104.txt \
Installation_with_PF_RING.txt \
Installation_from_GIT_with_PCRE-JIT.txt \
Setting_up_IPSinline_for_Linux.txt \
Third_Party_Installation_Guides.txt \
Ubuntu_Installation.txt \
Ubuntu_Installation_from_GIT.txt

datarootdir=@datarootdir@
docdir = ${datarootdir}/doc/${PACKAGE}
dist_doc_DATA = ${EXTRA_DIST}
